k3s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jktlug-dev
  labels:
    app.kubernetes.io/name: jktlug-website
    app.kubernetes.io/instance: dev
